--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
     "@mui/material": "^5.13.1",
+    "@syncfusion/ej2-react-grids": "^22.2.10",
+    "@syncfusion/ej2-react-pivotview": "^22.2.10",
     "@tanstack/react-query": "^4.32.1",
     "axios": "^1.4.0",
     "formik": "^2.4.3",
