--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@tanstack/react-query": "^4.32.1",
     "axios": "^1.4.0",
     "formik": "^2.4.3",
+    "i18next": "^23.4.6",
+    "i18next-browser-languagedetector": "^7.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.0",
     "react-router-dom": "^6.11.2",
     "simplebar-react": "^3.2.4",
     "sort-by": "^1.2.0",
